# matgeo

./: .gitignore  CGAL.md  CMakeLists.txt  README.md  build.md  compas_cgal.md  environment.yml  parallel.py  pyproject.toml  triangulation.py  vcpkg.json
src/: hmc.cpp  triangulation.cpp  voronoi.cpp
src/matgeo/: __init__.py  compat.py  crystals.py  delaunay.py  ellipsoid.py  partition.py  plane.py  poly_utils.py  sphere.py  spv_math.py  surface.py  torus.py  torus_math.py  triangulation.py  voronoi.py
src/matgeo/domains/: periodic.py  utils.py
src/matgeo/dynamics/: chem.py  polymerization.py  wasserstein.py
src/matgeo/points/: cvt.py  matern.py
src/matgeo/random/: coulomb.py
src/matgeo/utils/: array.py  mask.py  poly.py
src/matgeo/voronoi/: __init__.py  animate.py
tests/: test_cgal.py  test_periodic_delaunay.py
