[build-system]
requires = [
    "scikit-build-core>=0.4.3",
    "nanobind>=1.3.2",
    "ninja",
    "cmake>=3.5",
]
build-backend = "scikit_build_core.build"

[project]
name = "matgeo"
version = "0.0.1"
description = "An example minimal project that compiles bindings using nanobind and scikit-build"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Anand Srinivasan", email = "as3273@cam.ac.uk" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "numpy>=2.2.0",
    "scipy>=1.7.0",
    "cvxpy>=1.3.0",
    "shapely>=2.0.0",    # Using newer Shapely API
    "scikit-learn>=1.0.0",
    "opencv-python>=4.5.0",
    "jax>=0.4.0",
    "tqdm>=4.0.0",
    "potpourri3d>=0.0.4",
    "joblib>=1.0.0",
    "alphashape>=1.3.1",
    "matplotlib>=3.5.0",
    "siphash24",
    "osqp",
    "ecos",
]

[project.urls]
Homepage = "https://github.com/asrvsn/matgeo"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Don't test Python 3.8 wheels on macOS/arm64
test-skip="cp38-macosx_*:arm64"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"